k8s/busybox-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-frontend
  labels:
    role: frontend
spec:
  containers:
  - name: test
    image: busybox
    command: ["sleep", "3600"]
