k8s/busybox-blocked.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-other
  labels:
    role: outsider
spec:
  containers:
  - name: test
    image: busybox
    command: ["sleep", "3600"]
