k8s/busybox-unauth.yaml
# busybox-unauth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-unauthorized
  labels:
    app: unauthorized
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sleep', '3600']
