k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: demo-ns
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - name: http  
    protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
